Closed Bug 874569 Opened 13 years ago Closed 13 years ago

getUserMedia - Video playback orientation does not adapt to device orientation

Categories

(Core :: WebRTC: Audio/Video, defect)

ARM
Android
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla25
Tracking Status
firefox24 --- verified
firefox25 --- verified
fennec + ---

People

(Reporter: aaronmt, Assigned: gcp)

References

()

Details

(Keywords: reproducible, Whiteboard: [getUserMedia][android-gum+])

Attachments

(1 file)

Currently when video playback is active through getUserMedia, the orientation of playback as shown to the user does not adapt to device orientation such as rotating a device from portrait to landscape. Perhaps this will be fixed via bug 862808? Steps to reproduce i) http://mozilla.github.io/webrtc-landing/gum_test.html ii) Tap 'Video' iii) Rotate device to landscape Expected Results: Portrait → Landscape → (Video element responds to device orientation and changes appropriately) Actual Results: Portrait → Landscape → (Video element does not respond to device orientation change and it remains in former orientation; video is facing sideways) -- HTC One (Android 4.1, Nightly 05/21) LG Nexus 4 (Android 4.2.2, Nightly 05/21)
I would retest this with the fix in bug 862808 to confirm if this still a bug or not.
Whiteboard: [getUserMedia] → [getUserMedia][blocking-gum-][android-gum+]
Bug 862808 did not fix this.
Whiteboard: [getUserMedia][blocking-gum-][android-gum+] → [getUserMedia][android-gum+]
Important for any camera-based web application you build for the web. A camera app that doesn't change it's video reflective of the device's orientation would be a significant loss of functionality.
tracking-fennec: --- → ?
Don't think this needs to block pref on, however. But we need this for any camera-based web application before we ship the feature.
tracking-fennec: ? → +
Assignee: nobody → gpascutto
1) Remove SetPreviewRotation and friends. We try very hard not to show the preview in the first place, how the image is rotated there is none of our concern, so this code can go. 2) Add a listener for onConfigurationChanged, recalculate rotation amounts. Make the rotation amount a per-frame parameter, instead of calculating it once as the Camera is initialized.
Attachment #768500 - Flags: review?(blassey.bugs)
Attachment #768500 - Flags: review?(blassey.bugs) → review+
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla25
Keywords: verifyme
QA Contact: jsmith
Looks fine on trunk, needed on Aurora.
Status: RESOLVED → VERIFIED
Keywords: verifyme
Comment on attachment 768500 [details] [diff] [review] Patch 1. Adjust rotation amounts [Approval Request Comment] Bug caused by (feature/regressing bug #): bug 881875 (metabug) User impact if declined: gUM video won't rotate along with the device Testing completed (on m-c, etc.): landed on m-c a few days ago, verified by QA Risk to taking this patch (and alternatives if risky): Low, limited to Android WebRTC String or IDL/UUID changes made by this patch: NA
Attachment #768500 - Flags: approval-mozilla-aurora?
Attachment #768500 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Whiteboard: [getUserMedia][android-gum+] → [getUserMedia][android-gum+][webrtc-uplift]
gcp - Can you land this on Aurora 24 now that we have aurora approval?
Flags: needinfo?(gpascutto)
Flags: needinfo?(gpascutto)
Target Milestone: mozilla25 → ---
Target Milestone: --- → mozilla25
Whiteboard: [getUserMedia][android-gum+][webrtc-uplift] → [getUserMedia][android-gum+]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: