Bug 874569 - Adjust rotation amount if the Android device is rotated. r=blassey a=bajaj