media/webrtc/trunk/webrtc/modules/video_capture/android/video_capture_android.h
@@ -47,7 +47,9 @@ class VideoCaptureAndroid : public VideoCaptureImpl {
   static void JNICALL ProvideCameraFrame (JNIEnv * env,
                                           jobject,
                                           jbyteArray javaCameraFrame,
-                                          jint length, jlong context);
+                                          jint length,
+                                          jint rotation,
+                                          jlong context);
   DeviceInfoAndroid _capInfo;
   jobject _javaCaptureObj; // Java Camera object.
   VideoCaptureCapability _frameInfo;
