mobile/android/base/GeckoApp.java
@@ -2070,6 +2070,12 @@ abstract public class GeckoApp
                 mFormAssistPopup.hide();
             refreshChrome();
         }
+
+        if (mAppStateListeners != null) {
+            for (GeckoAppShell.AppStateListener listener: mAppStateListeners) {
+                listener.onConfigurationChanged();
+            }
+        }
     }
 
     public String getContentProcessName() {
