mobile/android/base/GeckoAppShell.java
@@ -1956,6 +1956,7 @@ public class GeckoAppShell
     public interface AppStateListener {
         public void onPause();
         public void onResume();
+        public void onConfigurationChanged();
     }
 
     public interface GeckoInterface {
